@@ -3,6 +3,9 @@ All notable changes to this project will be documented in this file.
 
 ## [1.22] 2020-10-08
 
+### Added
+  - Range#set_value
+
 ## [1.21] 2020-05-08
   
 ### Added
